# crucible

./: .bom.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  cru  demo.py  demo_cli_enhanced.py  demo_domain_models.py  demo_event_persistence.py  demo_plugins.py  demo_repository_setup.py  demo_summarizer.py  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  run_ai.py  setup.py  test_ai_limits.py  test_summary.py  tox.ini
.github/workflows/: ci.yml
blueprints/: 001_domain_expert_persona.md  002_brainstorm_entities.md  003_codex_expert_implementer.md  0_domain_expert_persona.md  1_brainstorm_entities.md  blueprints.yaml
commits/closed/: 0001_blueprint_copy_cli.md  0002_ai_model_integration.md  0005_summarization_techniques.md  0006_event_persistence.md  0008_repository_skeleton.md  0010_plugin_system.md
commits/open/: 0003_expand_prompt_generation.md  0004_brainstorming_algorithms.md  0007_cli_user_arguments.md  0009_core_domain_models.md  0011_error_handling.md
design/: architecture_overview.md  repo_structure.md  snippets.md  todo.md  walking_skeleton.md
docs/: design-ai-model-integration.md  design-blueprint-copy.md
examples/plugins/: README.md
examples/plugins/github_integration/: __init__.py  manifest.json
examples/plugins/slack_notifier/: __init__.py  manifest.json
src/: cli.py
src/crucible/: ai.py  ai_observability.py  brainstormer.py  event_bus.py  orchestrator.py  summarizer.py
src/crucible/domain/: __init__.py  idea.py  prompt.py  value_objects.py
src/crucible/plugins/: __init__.py  base.py  loader.py  registry.py  security.py
src/crucible/prompts/: generator.py
src/crucible/repository/: __init__.py  interfaces.py  json_repositories.py
tests/: test_ai_model.py  test_brainstormer.py  test_cli.py  test_cli_enhanced.py  test_domain_models.py  test_event_bus.py  test_plugins.py  test_repositories.py  test_repository_setup.py  test_summarizer.py
